fix: crop begining of the track to start normally + fix: pitch flickering on laptop browser

--- a/src/App.css
+++ b/src/App.css
@@ -119,10 +119,12 @@
   background-color: #e9ecef;
   border-radius: 20px;
   padding: 15px;
+  padding-top: 80px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
+  gap: 20px;
   box-shadow: 4px 4px 0px rgba(0,0,0,0.05);
   border: 3px solid #ddd;
 }
